--- a/public/adaugaProduse.html
+++ b/public/adaugaProduse.html
@@ -6,6 +6,7 @@
         <span class="titlu">introdu codul de la produs</span>
         <div class="search-area">
             <input type="text" name="search" id="textbox" placeholder="link, cod sau keyword">
+            <input type="text" name="search" id="numeMagazin" placeholder="numele magazinului(daca nu ai link)">
             <button type="button" onclick="adaugaProdus('textbox')">cauta</button>
         </div>
         <div class="produse" id="produse-container">
